[gd_scene load_steps=2 format=2]

[ext_resource path="res://MeasureListNode.gd" type="Script" id=1]

[node name="MeasureListNode" type="Node2D"]
script = ExtResource( 1 )

[node name="VisNotifier" type="VisibilityNotifier2D" parent="."]

[node name="TitleBackground" type="ColorRect" parent="."]
margin_right = 80.0
margin_bottom = 200.0
color = Color( 0.235294, 0.6, 0.615686, 1 )

[node name="Title" type="Label" parent="."]
margin_right = 80.0
margin_bottom = 200.0
text = "Measure"
align = 1
valign = 1

[node name="Octaves" type="Node2D" parent="."]
position = Vector2( 80, 0 )

[connection signal="screen_entered" from="VisNotifier" to="." method="_on_VisNotifier_screen_entered"]
[connection signal="screen_exited" from="VisNotifier" to="." method="_on_VisNotifier_screen_exited"]
